AttributeSet: Avoid items' label to wrap on display in the backoffice (regression from 42be0c20)

--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -48,7 +48,15 @@ $ibo-field--enable-bulk--checkbox--margin-left: 8px !default;
 
   /* Avoid value to overflow from its container with very long strings (typically URLs) */
   /* Note: Some types of attribute must be excluding as it can alter their rendering    */
-  &:not([data-attribute-type="AttributeBlob"]):not([data-attribute-type="AttributeFile"]):not([data-attribute-type="AttributeImage"]):not([data-attribute-type="AttributeCustomFields"]):not(.ibo-input-file-select--container) {
+  &:not([data-attribute-type="AttributeBlob"])
+  &:not([data-attribute-type="AttributeFile"])
+  &:not([data-attribute-type="AttributeImage"])
+  &:not([data-attribute-type="AttributeCustomFields"])
+  &:not([data-attribute-type="AttributeTagSet"])
+  &:not([data-attribute-type="AttributeEnumSet"])
+  &:not([data-attribute-type="AttributeClassAttCodeSet"])
+  &:not([data-attribute-type="AttributeQueryAttCodeSet"])
+  &:not(.ibo-input-file-select--container) {
     /* We need the rule to apply for the class and all its descendants, hence the "&, & *" */
     .ibo-field--value {
       &, & * {
